fix tasks list grid on mobile

--- a/src/pages/Tasks/List/List.scss
+++ b/src/pages/Tasks/List/List.scss
@@ -13,3 +13,10 @@
   width: 50%;
   flex-basis: 50%;
 }
+
+@media (max-width: 768px) {
+  .tasks-list .column {
+    width: 100%;
+    flex-basis: 100%;
+  }
+}
